# tr-plugin-dvcf

./: .gitignore  AGENTS.md  CMakeLists.txt  DVCF_SPEC.md  README.md  mqtt_dvcf.cc
docs/superpowers/plans/: 2026-03-28-call-metadata.md
docs/superpowers/specs/: 2026-03-28-avcf-analog-voice-capture-design.md  2026-03-28-call-metadata-design.md
scripts/: make_dvcf_fixture.py  validate_dvcf_fixture.py
